Update `OpenedPackages` list