@@ -6,10 +6,11 @@ import org.gradle.internal.os.OperatingSystem
 
 // OpenedPackages list synchronized with:
 // https://raw.githubusercontent.com/JetBrains/intellij-community/master/plugins/devkit/devkit-core/src/run/OpenedPackages.txt
-// last version: bc3f330f28b552bcc1fb3fd98212aee68e7e3280
+// last version: 647407b1aaab13a51a8880689431ed780ab45668
 val OpenedPackages = listOf(
     "--add-opens=java.base/java.io=ALL-UNNAMED",
     "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
     "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
     "--add-opens=java.base/java.net=ALL-UNNAMED",
     "--add-opens=java.base/java.nio=ALL-UNNAMED",
@@ -21,6 +22,7 @@ val OpenedPackages = listOf(
     "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
     "--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED",
     "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
     "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
     "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
     "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
